--- a/roles/nodejs/tasks/main.yml
+++ b/roles/nodejs/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: Nvm setup script
   template:
-    src: nvm-setup.j2
+    src: nvm-setup
     dest: "{{ home_dir }}/bin/setup-nvm"
     mode: 0755
   tags:
