working pyenv + setup script

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,8 @@
 [defaults]
 
-hostfile = inventory
+inventory = inventory
 retry_files_enabled = False
-ask_sudo_pass=True
-
+roles_path = roles
 [ssh_connection]
 
 pipelining = True
